--- a/Node/react_project/package.json
+++ b/Node/react_project/package.json
@@ -10,11 +10,14 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-heart": "^1.0.6",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
